# skills-manager

./: .gitignore  LICENSE  README.en.md  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  tailwind.config.js  vite-plugin-file-api.ts  vite.config.ts  启动SkillsManager.bat
.github/workflows/: build.yml
scripts/: generate-icons.cjs  launch.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: ErrorBoundary.tsx
src/components/common/: Toast.tsx
src/components/download/: DownloadPanel.tsx
src/components/explorer/: SkillCard.tsx  SkillList.tsx  SkillTree.tsx
src/components/layout/: Sidebar.tsx  TabBar.tsx  Toolbar.tsx
src/components/search/: SearchBar.tsx  SearchResults.tsx
src/components/settings/: SettingsPanel.tsx  SyncHistorySection.tsx
src/components/sync/: SyncPanel.tsx
src/components/viewer/: FrontmatterPanel.tsx  SkillViewer.tsx
src/constants/: tools.ts
src/services/: apiBridge.ts  downloadService.ts  skillParser.ts  skillScanner.ts  syncEngine.ts
src/services/converters/: base.ts  cline.ts  continue.ts  copilot.ts  cursor.ts  trae.ts  windsurf.ts
src/stores/: downloadStore.ts  searchStore.ts  settingsStore.ts  skillStore.ts  syncHistoryStore.ts  syncStore.ts  toastStore.ts
src/types/: skill.ts
src/utils/: frontmatter.ts  path.ts
